--- a/index.html
+++ b/index.html
@@ -1,21 +1,87 @@
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Anish Mukherjee CV</title>
-   </head>
-  <body>
-    <hr>
-    <h2>Anish Mukherjee</h2>
-    <h3>anibeto7@gmail.com</h3>
-    <hr>
-    <form>
-      <label>Please enter a date</label><br>
-      <input type="checkbox">
-      <input type="file"><br>
-      <input type="date"><br>
-      <input type="radio"><br>
-      <input type="range"><br>
-      <input type="submit"><br>
-    </form>
-   </body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>🐉 My Website</title>
+    </head>
+
+    <body>
+        <table>
+            <td>
+                <img src="images/anish-modified.png" alt="Anish Image" height="150px">
+            </td>
+            <td>
+                <h1>Anish Mukherjee</h1>
+                <p><em>Software Developer at <a href="https://www.infosys.com/"></em><strong>Infosys Limited</strong></a></p>
+                <p>I am a Mainframe Application Developer and a web developer. I love tea and cook my own meals.</p>
+            </td>
+        </table>
+        <hr>
+        <h3>Education</h3>
+        <ul>
+            <li>
+                <p><a href="https://gcect.ac.in/"><strong><u>Government College of Engineering and Ceramic Technology</u></strong></a></p>
+                <p><strong>Bachelor of Technology: </strong>Information Technology</strong></p>
+                <p><strong>Passing Year: </strong>2018</p>
+                <p><strong>Grade: </strong>7.73/10</p>
+            </li>
+            <br>
+            <li>
+                <p><a href="https://www.southpoint.edu.in/"><strong><u>South Point High School</u></strong></a></p>
+                <p><strong>Higher Secondary: </strong>Science</p>
+                <p><strong>Passing Year: </strong>2013</p>
+                <p><strong>Grade: </strong>76.8%</p>
+            </li>
+        </ul>
+        <hr>
+        <h3>Work Experience</h3>
+        <table>
+            <thead>
+                <th>Year</th>
+                <th>Work</th>
+            </thead>
+            <tr>
+                <td>2021 - Present</td>
+                <td>:   Senior Systems Engineer at Infosys</td>
+            </tr>
+            <tr>
+                <td>2018 - 2021</td>
+                <td>:   Junior Product Specialist at Cognizant</td>
+            </tr>
+        </table>
+        <hr>
+        <h3>Skills</h3>
+        <table>
+            <tr>
+                <td>
+                    <table>
+                        <tr>
+                            <td>Web development</td>
+                            <td>⭐⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Mainframe Development</td>
+                            <td>⭐⭐⭐⭐⭐</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td>Car Driving</td>
+                            <td>⭐⭐⭐⭐⭐</td>
+                        </tr>
+                        <tr>
+                            <td>Cooking</td>
+                            <td>⭐⭐⭐</td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+        <hr>
+        <a href="hobbies.html">My Hobbies</a>
+        <a href="contact.html">Contact Me</a>
+        <br>
+    </body>
 </html>
