--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table>
             <td>
-                <img src="https://github.com/anibeto7/cv/blob/main/images/anish-modified.png" alt="Anish Image" height="150px">
+                <img src="images/anish-modified.png" alt="Anish Image" height="150px">
             </td>
             <td>
                 <h1>Anish Mukherjee</h1>
